# FastAPI-auth

./: .env.example  .gitignore  Dockerfile  README.en.md  README.md  README.ru.md  README_RU.md  docker-compose.yml  pyproject.toml
auth/: main.py
auth/alembic/: env.py
auth/alembic/versions/: 2025_09_16_2008-5f0d2f618db8_create_users_sessions_with_can_abort.py  2025_10_20_1226-ebd763eb1deb_add_ipadress.py  2026_01_27_1529-810ced14e449_create_fk_remove_password.py
auth/api/: __init__.py
auth/api/api_v1/: __init__.py
auth/api/api_v1/authentication/: google.py  helpers.py  jwt_auth.py  register.py  validation.py
auth/api/api_v1/demo_auth/: demo_jwt_auth.py  helpers.py  register.py  validation.py
auth/api/api_v1/profiles/: users.py
auth/api/exceptions/: auth.py  handlers.py
auth/core/: config.py
auth/core/fs_broker/: __init__.py
auth/core/models/: base.py  db_helper.py  user.py
auth/core/redis/: __init__.py  cache.py
auth/core/schemas/: token.py  user.py
auth/crud/: tokens.py  users.py
auth/fs_subs/: users.py
auth/log_files/: auth_logs
auth/logs/: logger.py
auth/utils/: __init__.py  auth.py  case_conventer.py
